--- a/archetype/plt-kafka-project/src/main/resources/archetype-resources/pom.xml
+++ b/archetype/plt-kafka-project/src/main/resources/archetype-resources/pom.xml
@@ -40,6 +40,9 @@
         <!--See https://docs.spring.io/spring-kafka/reference/htmlsingle/#_introduction_2-->
         <spring-kafka.version>2.2.3.RELEASE</spring-kafka.version>
 
+        <!--libraries-->
+        <frdtu.lib.version>${base-pom-version}</frdtu.lib.version>
+
         <!--https://docs.confluent.io/current/clients/install.html?_ga=2.53151595.2105087684.1538406517-910848708.1535980058#installation-maven-->
         <confluent.maven.repo>https://packages.confluent.io/maven/</confluent.maven.repo>
         <confluent.version>5.0.0</confluent.version>
@@ -64,6 +67,19 @@
 
     <dependencyManagement>
         <dependencies>
+            <!--LIBRARY-->
+            <dependency>
+                <groupId>com.github.frtu.governance</groupId>
+                <artifactId>library-serdes</artifactId>
+                <version>${frdtu.lib.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.frtu.governance</groupId>
+                <artifactId>library-kafka</artifactId>
+                <version>${frdtu.lib.version}</version>
+            </dependency>
+
+            <!--Avro-->
             <dependency>
                 <groupId>org.apache.avro</groupId>
                 <artifactId>avro</artifactId>
