[maven-release-plugin] prepare for next development iteration

--- a/archetype/base-pom/pom.xml
+++ b/archetype/base-pom/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>com.github.frtu.archetype</groupId>
         <artifactId>archetype-pom</artifactId>
-        <version>0.3.6</version>
+        <version>0.3.7-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -42,7 +42,7 @@
         <avro.version>1.8.2</avro.version>
         <jackson-binding.version>2.8.11</jackson-binding.version>
         <!--===========================-->
-        <frdtu.lib.version>0.3.6</frdtu.lib.version>
+        <frdtu.lib.version>0.3.7-SNAPSHOT</frdtu.lib.version>
     </properties>
 
 
