--- a/libraries/library-serdes/pom.xml
+++ b/libraries/library-serdes/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>com.github.frtu.governance</groupId>
         <artifactId>libraries-pom</artifactId>
-        <version>0.3.6</version>
+        <version>0.3.7-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
