--- a/timeseries/influxdb-maven-plugin/pom.xml
+++ b/timeseries/influxdb-maven-plugin/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.github.frtu.governance</groupId>
 		<artifactId>maven-plugin-parent-pom</artifactId>
-		<version>0.3.6</version>
+		<version>0.3.7-SNAPSHOT</version>
 		<relativePath>../../maven-plugins/pom.xml</relativePath>
 	</parent>
 
