--- a/libraries/pom.xml
+++ b/libraries/pom.xml
@@ -14,6 +14,7 @@
     <description>Libraries</description>
 
     <modules>
+        <module>library-dot</module>
         <module>library-serdes</module>
         <module>library-kafka</module>
     </modules>
