[DOC] Fix comments

--- a/libraries/library-kafka/pom.xml
+++ b/libraries/library-kafka/pom.xml
@@ -21,7 +21,7 @@
 
     <dependencies>
         <!--===========================-->
-        <!-- UNCOMMENT for Internal domain dependencies -->
+        <!-- Internal domain dependencies -->
         <!--===========================-->
         <dependency>
             <groupId>${project.groupId}</groupId>
