--- a/schema-registries/schema-maven-plugin/pom.xml
+++ b/schema-registries/schema-maven-plugin/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.github.frtu.governance</groupId>
@@ -10,8 +11,10 @@
     <artifactId>schema-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
 
-    <name>schema-registries-maven-plugin Maven Plugin</name>
-    <description>A maven plugin to register schemas into a Schema Registry.</description>
+    <name>schema-maven-plugin Maven Plugin</name>
+    <description>A maven plugin for schemas (schema2dot - generate a dot notation for Avro schema | pojo2avro -
+        generation from POJO).
+    </description>
 
     <properties>
     </properties>
