--- a/archetype/base-pom/pom.xml
+++ b/archetype/base-pom/pom.xml
@@ -42,13 +42,19 @@
         <avro.version>1.8.2</avro.version>
         <jackson-binding.version>2.8.11</jackson-binding.version>
         <!--===========================-->
-        <frdtu.lib.version>0.3.7-SNAPSHOT</frdtu.lib.version>
+        <frdtu.lib.version>${project.version}</frdtu.lib.version>
+        <frdtu.simple-scan.version>0.2.0</frdtu.simple-scan.version>
     </properties>
 
 
     <dependencyManagement>
         <dependencies>
             <!--LIBRARY-->
+            <dependency>
+                <groupId>com.github.frtu.governance</groupId>
+                <artifactId>library-dot</artifactId>
+                <version>${frdtu.lib.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.github.frtu.governance</groupId>
                 <artifactId>library-serdes</artifactId>
@@ -58,6 +64,12 @@
                 <groupId>com.github.frtu.governance</groupId>
                 <artifactId>library-kafka</artifactId>
                 <version>${frdtu.lib.version}</version>
+            </dependency>
+            <!-- Directory scanner -->
+            <dependency>
+                <groupId>com.github.frtu.simple</groupId>
+                <artifactId>simple-scan</artifactId>
+                <version>${frdtu.simple-scan.version}</version>
             </dependency>
 
             <!-- commons libs -->
