--- a/maven-plugins/pom.xml
+++ b/maven-plugins/pom.xml
@@ -19,12 +19,6 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<slf4j.version>1.7.20</slf4j.version>
-		<junit.version>4.11</junit.version>
-
-		<commons-lang3.version>3.3.2</commons-lang3.version>
-		<commons-io.version>2.4</commons-io.version>
-		<simple-scan.version>0.2.0</simple-scan.version>
 	</properties>
 
 	<dependencies>
@@ -76,38 +70,13 @@
 
 	<dependencyManagement>
 		<dependencies>
-			<!-- Logs -->
+			<!--Internal domain dependencies -->
 			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-api</artifactId>
-				<version>${slf4j.version}</version>
-			</dependency>
-
-			<!-- commons libs -->
-			<dependency>
-				<groupId>org.apache.commons</groupId>
-				<artifactId>commons-lang3</artifactId>
-				<version>${commons-lang3.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>commons-io</groupId>
-				<artifactId>commons-io</artifactId>
-				<version>${commons-io.version}</version>
-			</dependency>
-
-			<!-- Directory scanner -->
-			<dependency>
-				<groupId>com.github.frtu.simple</groupId>
-				<artifactId>simple-scan</artifactId>
-				<version>${simple-scan.version}</version>
-			</dependency>
-
-			<!-- TEST -->
-			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>${junit.version}</version>
-				<scope>test</scope>
+				<groupId>com.github.frtu.archetype</groupId>
+				<artifactId>base-pom</artifactId>
+				<version>${project.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
