--- a/archetype/plt-kafka-project/src/main/resources/archetype-resources/pom.xml
+++ b/archetype/plt-kafka-project/src/main/resources/archetype-resources/pom.xml
@@ -35,10 +35,14 @@
 
         <avro.version>1.8.1</avro.version>
         <!--<jackson.version>2.8.11.1</jackson.version>-->
-        <kafka.version>2.0.0</kafka.version>
+        <kafka.version>2.0.1</kafka.version>
+
+        <!--https://search.maven.org/search?q=g:org.springframework.boot%20a:spring-boot-dependencies-->
+        <spring-boot.version>2.1.3.RELEASE</spring-boot.version>
+        <spring.version>5.0.12.RELEASE</spring.version>
 
         <!--See https://docs.spring.io/spring-kafka/reference/htmlsingle/#_introduction_2-->
-        <spring-kafka.version>2.2.3.RELEASE</spring-kafka.version>
+        <!--<spring-kafka.version>2.2.4.RELEASE</spring-kafka.version>-->
 
         <!--libraries-->
         <frdtu.lib.version>${base-pom-version}</frdtu.lib.version>
@@ -130,12 +134,19 @@
                 </exclusions>
             </dependency>
 
-            <!-- Spring Kafka -->
+            <!-- Spring Boot and Platform -->
             <dependency>
-                <groupId>org.springframework.kafka</groupId>
-                <artifactId>spring-kafka</artifactId>
-                <version>${spring-kafka.version}</version>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
+            <!--<dependency>-->
+                <!--<groupId>org.springframework.kafka</groupId>-->
+                <!--<artifactId>spring-kafka</artifactId>-->
+                <!--<version>${spring-kafka.version}</version>-->
+            <!--</dependency>-->
 
             <!-- Internal domain dependencies -->
             <!--<dependency>-->
