--- a/archetype/base-pom/pom.xml
+++ b/archetype/base-pom/pom.xml
@@ -19,28 +19,26 @@
 
         <java.version>1.8</java.version>
 
-        <slf4j.version>1.7.16</slf4j.version>
-        <logback.version>1.1.5</logback.version>
-        <junit.version>4.10</junit.version>
+        <slf4j.version>1.7.25</slf4j.version>
+        <logback.version>1.2.3</logback.version>
+        <junit.version>4.12</junit.version>
         <powermock.version>1.6.2</powermock.version>
         <easymock.version>3.2</easymock.version>
 
-        <commons-lang3.version>3.6</commons-lang3.version>
+        <commons-lang3.version>3.8.1</commons-lang3.version>
         <commons-io.version>2.4</commons-io.version>
         <!-- https://nvd.nist.gov/vuln/detail/CVE-2018-11771 -->
         <commons-compress.version>1.18</commons-compress.version>
 
-        <jackson.version>2.8.11</jackson.version>
-        <!-- FIX https://nvd.nist.gov/vuln/detail/CVE-2018-7489-->
-        <jackson-binding.version>${jackson.version}.1</jackson-binding.version>
-
-        <!-- FIX https://nvd.nist.gov/vuln/detail/CVE-2018-11040 -->
-        <!-- FIX https://nvd.nist.gov/vuln/detail/CVE-2018-11039 -->
-        <spring.version>4.3.18.RELEASE</spring.version>
+        <!--https://search.maven.org/search?q=g:org.springframework.boot%20a:spring-boot-dependencies-->
+        <spring.version>5.0.12.RELEASE</spring.version>
+        <spring-boot.version>2.1.3.RELEASE</spring-boot.version>
 
         <reflections.version>0.9.11</reflections.version>
         <avro.version>1.8.2</avro.version>
-        <jackson-binding.version>2.8.11</jackson-binding.version>
+        <jackson.version>2.8.11</jackson.version>
+        <!-- FIX https://nvd.nist.gov/vuln/detail/CVE-2018-7489-->
+        <jackson-binding.version>${jackson.version}.1</jackson-binding.version>
         <!--===========================-->
         <frdtu.lib.version>${project.version}</frdtu.lib.version>
         <frdtu.simple-scan.version>0.2.0</frdtu.simple-scan.version>
@@ -138,6 +136,14 @@
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context</artifactId>
                 <version>${spring.version}</version>
+            </dependency>
+            <!-- Spring Boot and Platform -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
 
             <!--===========================-->
