--- a/archetype/plt-kafka-project/src/main/resources/archetype-resources/pom.xml
+++ b/archetype/plt-kafka-project/src/main/resources/archetype-resources/pom.xml
@@ -23,23 +23,24 @@
         <!-- Set based on docker confluentinc/cp-kafka:5.0.0-2 -->
         <!-- & on https://search.maven.org/artifact/org.apache.kafka/kafka-clients/2.0.0/jar -->
         <!--===========================-->
-        <slf4j.version>1.7.25</slf4j.version>
-        <logback.version>1.2.2</logback.version>
-        <junit.version>4.12</junit.version>
+        <!--UNCOMMENT for override-->
+        <!--<slf4j.version>1.7.25</slf4j.version>-->
+        <!--<logback.version>1.2.3</logback.version>-->
+        <!--<junit.version>4.12</junit.version>-->
         <!--<powermock.version>1.6.2</powermock.version>-->
         <easymock.version>3.6</easymock.version>
 
-        <commons-lang3.version>3.5</commons-lang3.version>
+        <!--<commons-lang3.version>3.5</commons-lang3.version>-->
         <!--<commons-io.version>2.4</commons-io.version>-->
         <!--===========================-->
 
-        <avro.version>1.8.1</avro.version>
+        <!--<avro.version>1.8.1</avro.version>-->
         <!--<jackson.version>2.8.11.1</jackson.version>-->
-        <kafka.version>2.0.1</kafka.version>
+        <!--<kafka.version>2.0.1</kafka.version>-->
 
         <!--https://search.maven.org/search?q=g:org.springframework.boot%20a:spring-boot-dependencies-->
-        <spring-boot.version>2.1.3.RELEASE</spring-boot.version>
-        <spring.version>5.0.12.RELEASE</spring.version>
+        <!--<spring-boot.version>2.1.3.RELEASE</spring-boot.version>-->
+        <!--<spring.version>5.0.12.RELEASE</spring.version>-->
 
         <!--See https://docs.spring.io/spring-kafka/reference/htmlsingle/#_introduction_2-->
         <!--<spring-kafka.version>2.2.4.RELEASE</spring-kafka.version>-->
@@ -135,17 +136,12 @@
             </dependency>
 
             <!-- Spring Boot and Platform -->
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-dependencies</artifactId>
-                <version>${spring-boot.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
             <!--<dependency>-->
-                <!--<groupId>org.springframework.kafka</groupId>-->
-                <!--<artifactId>spring-kafka</artifactId>-->
-                <!--<version>${spring-kafka.version}</version>-->
+                <!--<groupId>org.springframework.boot</groupId>-->
+                <!--<artifactId>spring-boot-dependencies</artifactId>-->
+                <!--<version>${spring-boot.version}</version>-->
+                <!--<type>pom</type>-->
+                <!--<scope>import</scope>-->
             <!--</dependency>-->
 
             <!-- Internal domain dependencies -->
