--- a/libraries/library-kafka/pom.xml
+++ b/libraries/library-kafka/pom.xml
@@ -13,7 +13,7 @@
     <description>Library for Kafka</description>
 
     <properties>
-        <kafka.version>2.0.0</kafka.version>
+        <kafka.version>2.0.1</kafka.version>
         <!--https://docs.confluent.io/current/clients/install.html?_ga=2.53151595.2105087684.1538406517-910848708.1535980058#installation-maven-->
         <confluent.maven.repo>https://packages.confluent.io/maven/</confluent.maven.repo>
         <confluent.version>5.0.0</confluent.version>
@@ -44,6 +44,27 @@
         <dependency>
             <groupId>io.confluent</groupId>
             <artifactId>kafka-avro-serializer</artifactId>
+        </dependency>
+
+        <!--Spring Kafka-->
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka-test</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <!-- Log -->
