Only spring-kafka is needed & make the spring-boot JAR optional only for test. - User can use Spring boot by importing it himself
Optimize ConsumerConfiguration (EnableKafka is only for him & allow to copy group.id prop from client.id)
Add Spring Boot sample application in the test

--- a/libraries/library-kafka/pom.xml
+++ b/libraries/library-kafka/pom.xml
@@ -29,12 +29,6 @@
             <version>${project.version}</version>
         </dependency>
 
-        <!-- Spring -->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
-        </dependency>
-
         <!-- Kafka -->
         <dependency>
             <groupId>org.apache.kafka</groupId>
@@ -54,7 +48,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
-            <scope>provided</scope>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
