--- a/archetype/base-pom/pom.xml
+++ b/archetype/base-pom/pom.xml
@@ -36,9 +36,8 @@
 
         <reflections.version>0.9.11</reflections.version>
         <avro.version>1.8.2</avro.version>
-        <jackson.version>2.8.11</jackson.version>
-        <!-- FIX https://nvd.nist.gov/vuln/detail/CVE-2018-7489-->
-        <jackson-binding.version>${jackson.version}.1</jackson-binding.version>
+        <jackson.version>2.9.8</jackson.version>
+        <jackson-binding.version>${jackson.version}</jackson-binding.version>
         <!--===========================-->
         <frdtu.lib.version>${project.version}</frdtu.lib.version>
         <frdtu.simple-scan.version>0.2.0</frdtu.simple-scan.version>
