--- a/archetype/base-pom/pom.xml
+++ b/archetype/base-pom/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>com.github.frtu.archetype</groupId>
         <artifactId>archetype-pom</artifactId>
-        <version>0.3.7-SNAPSHOT</version>
+        <version>0.3.7</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -39,7 +39,7 @@
         <jackson.version>2.9.8</jackson.version>
         <jackson-binding.version>${jackson.version}</jackson-binding.version>
         <!--===========================-->
-        <frdtu.lib.version>%PROJECT_VERSION%</frdtu.lib.version>
+        <frdtu.lib.version>0.3.7</frdtu.lib.version>
         <frdtu.simple-scan.version>0.2.0</frdtu.simple-scan.version>
     </properties>
 
@@ -280,7 +280,7 @@
                             <file>${project.basedir}/pom.xml</file>
                             <replacements>
                                 <replacement>
-                                    <token>%PROJECT_VERSION%</token>
+                                    <token>0.3.7</token>
                                     <value>${project.version}</value>
                                 </replacement>
                             </replacements>
@@ -290,4 +290,8 @@
             </build>
         </profile>
     </profiles>
+
+  <scm>
+    <tag>v0.3.7</tag>
+  </scm>
 </project>
