--- a/archetype/plt-kafka-project/pom.xml
+++ b/archetype/plt-kafka-project/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>com.github.frtu.archetype</groupId>
         <artifactId>archetype-pom</artifactId>
-        <version>0.3.7</version>
+        <version>0.3.8-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -39,8 +39,4 @@
             </plugin>
         </plugins>
     </build>
-
-  <scm>
-    <tag>v0.3.7</tag>
-  </scm>
 </project>
