--- a/schema-registries/schema-registries-maven-plugin/pom.xml
+++ b/schema-registries/schema-registries-maven-plugin/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>com.github.frtu.governance</groupId>
         <artifactId>schema-registries-toolbox-pom</artifactId>
-        <version>0.3.7</version>
+        <version>0.3.8-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
