--- a/archetype/base-pom/pom.xml
+++ b/archetype/base-pom/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>com.github.frtu.archetype</groupId>
         <artifactId>archetype-pom</artifactId>
-        <version>0.3.7-SNAPSHOT</version>
+        <version>0.3.7</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -39,7 +39,7 @@
         <jackson.version>2.9.8</jackson.version>
         <jackson-binding.version>${jackson.version}</jackson-binding.version>
         <!--===========================-->
-        <frdtu.lib.version>0.3.7-SNAPSHOT</frdtu.lib.version>
+        <frdtu.lib.version>0.3.7</frdtu.lib.version>
         <frdtu.simple-scan.version>0.2.0</frdtu.simple-scan.version>
     </properties>
 
