--- a/archetype/plt-kafka-project/src/main/resources/archetype-resources/pom.xml
+++ b/archetype/plt-kafka-project/src/main/resources/archetype-resources/pom.xml
@@ -34,6 +34,7 @@
         <!--<commons-io.version>2.4</commons-io.version>-->
         <!--===========================-->
 
+        <!--UNCOMMENT for override-->
         <!--<avro.version>1.8.1</avro.version>-->
         <!--<jackson.version>2.8.11.1</jackson.version>-->
         <!--<kafka.version>2.0.1</kafka.version>-->
@@ -46,7 +47,7 @@
         <!--<spring-kafka.version>2.2.4.RELEASE</spring-kafka.version>-->
 
         <!--libraries-->
-        <frdtu.lib.version>${base-pom-version}</frdtu.lib.version>
+        <frtu.lib.version>${base-pom-version}</frtu.lib.version>
 
         <!--https://docs.confluent.io/current/clients/install.html?_ga=2.53151595.2105087684.1538406517-910848708.1535980058#installation-maven-->
         <confluent.maven.repo>https://packages.confluent.io/maven/</confluent.maven.repo>
@@ -72,36 +73,40 @@
 
     <dependencyManagement>
         <dependencies>
+            <!--===========================-->
+            <!--UNCOMMENT for override-->
+            <!--===========================-->
             <!--LIBRARY-->
-            <dependency>
-                <groupId>com.github.frtu.governance</groupId>
-                <artifactId>library-serdes</artifactId>
-                <version>${frdtu.lib.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.github.frtu.governance</groupId>
-                <artifactId>library-kafka</artifactId>
-                <version>${frdtu.lib.version}</version>
-            </dependency>
+            <!--<dependency>-->
+            <!--<groupId>com.github.frtu.governance</groupId>-->
+            <!--<artifactId>library-serdes</artifactId>-->
+            <!--<version>${frtu.lib.version}</version>-->
+            <!--</dependency>-->
+            <!--<dependency>-->
+            <!--<groupId>com.github.frtu.governance</groupId>-->
+            <!--<artifactId>library-kafka</artifactId>-->
+            <!--<version>${frtu.lib.version}</version>-->
+            <!--</dependency>-->
 
             <!--Avro-->
-            <dependency>
-                <groupId>org.apache.avro</groupId>
-                <artifactId>avro</artifactId>
-                <version>${avro.version}</version>
-            </dependency>
+            <!--<dependency>-->
+            <!--<groupId>org.apache.avro</groupId>-->
+            <!--<artifactId>avro</artifactId>-->
+            <!--<version>${avro.version}</version>-->
+            <!--</dependency>-->
             <!--Java client-->
-            <dependency>
-                <groupId>org.apache.kafka</groupId>
-                <artifactId>kafka-clients</artifactId>
-                <version>${kafka.version}</version>
-            </dependency>
+            <!--<dependency>-->
+            <!--<groupId>org.apache.kafka</groupId>-->
+            <!--<artifactId>kafka-clients</artifactId>-->
+            <!--<version>${kafka.version}</version>-->
+            <!--</dependency>-->
             <!--Scala client-->
-            <dependency>
-                <groupId>org.apache.kafka</groupId>
-                <artifactId>kafka_2.12</artifactId>
-                <version>${kafka.version}</version>
-            </dependency>
+            <!--<dependency>-->
+            <!--<groupId>org.apache.kafka</groupId>-->
+            <!--<artifactId>kafka_2.12</artifactId>-->
+            <!--<version>${kafka.version}</version>-->
+            <!--</dependency>-->
+            <!--===========================-->
 
             <!-- Confluent Stack -->
             <dependency>
@@ -135,22 +140,28 @@
                 </exclusions>
             </dependency>
 
+            <!--===========================-->
+            <!--UNCOMMENT for override-->
+            <!--===========================-->
             <!-- Spring Boot and Platform -->
             <!--<dependency>-->
-                <!--<groupId>org.springframework.boot</groupId>-->
-                <!--<artifactId>spring-boot-dependencies</artifactId>-->
-                <!--<version>${spring-boot.version}</version>-->
-                <!--<type>pom</type>-->
-                <!--<scope>import</scope>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-dependencies</artifactId>-->
+            <!--<version>${spring-boot.version}</version>-->
+            <!--<type>pom</type>-->
+            <!--<scope>import</scope>-->
             <!--</dependency>-->
 
+            <!--===========================-->
+            <!--UNCOMMENT to remove parent-->
+            <!--===========================-->
             <!-- Internal domain dependencies -->
             <!--<dependency>-->
-                <!--<groupId>com.github.frtu.archetype</groupId>-->
-                <!--<artifactId>base-pom</artifactId>-->
-                <!--<version>${base-pom-version}</version>-->
-                <!--<type>pom</type>-->
-                <!--<scope>import</scope>-->
+            <!--<groupId>com.github.frtu.archetype</groupId>-->
+            <!--<artifactId>base-pom</artifactId>-->
+            <!--<version>${base-pom-version}</version>-->
+            <!--<type>pom</type>-->
+            <!--<scope>import</scope>-->
             <!--</dependency>-->
         </dependencies>
     </dependencyManagement>
