--- a/archetype/plt-spark-project/src/main/resources/archetype-resources/pom.xml
+++ b/archetype/plt-spark-project/src/main/resources/archetype-resources/pom.xml
@@ -31,7 +31,7 @@
         <slf4j.version>1.7.25</slf4j.version>
         <logback.version>1.2.2</logback.version>
         <!--===========================-->
-        <frdtu.lib.version>${base-pom-version}</frdtu.lib.version>
+        <frtu.lib.version>${base-pom-version}</frtu.lib.version>
         <!--===========================-->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -58,12 +58,12 @@
             <dependency>
                 <groupId>com.github.frtu.governance</groupId>
                 <artifactId>library-serdes</artifactId>
-                <version>${frdtu.lib.version}</version>
+                <version>${frtu.lib.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.github.frtu.governance</groupId>
                 <artifactId>library-kafka</artifactId>
-                <version>${frdtu.lib.version}</version>
+                <version>${frtu.lib.version}</version>
             </dependency>
 
             <!--KAFKA-->
