Add parameter avro-model-artifact-id to allow import the avro project correctly ! Update the README doc

--- a/archetype/plt-kafka-project/src/main/resources/archetype-resources/__rootArtifactId__/pom.xml
+++ b/archetype/plt-kafka-project/src/main/resources/archetype-resources/__rootArtifactId__/pom.xml
@@ -17,7 +17,7 @@
         <!-- UNCOMMENT for Internal domain dependencies -->
         <!--<dependency>-->
         <!--<groupId>${project.groupId}</groupId>-->
-        <!--<artifactId>${artifactId}-datamodel</artifactId>-->
+        <!--<artifactId>${avro-model-artifact-id}-datamodel</artifactId>-->
         <!--<version>${project.version}</version>-->
         <!--</dependency>-->
 
