--- a/schema-registries/pom.xml
+++ b/schema-registries/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.github.frtu.governance</groupId>
 		<artifactId>maven-plugin-parent-pom</artifactId>
-		<version>1.0.0</version>
+		<version>1.0.1-SNAPSHOT</version>
 		<relativePath>../maven-plugins/pom.xml</relativePath>
 	</parent>
 
