Succeed to generate class based on annotation

--- a/libraries/pom.xml
+++ b/libraries/pom.xml
@@ -15,7 +15,9 @@
 
     <modules>
         <module>library-dot</module>
+        <!-- SHOULD BE RENAMED library-avro-serdes-->
         <module>library-serdes</module>
+        <module>library-proto-meta</module>
         <module>library-kafka</module>
     </modules>
 
