--- a/libraries/library-proto-meta/pom.xml
+++ b/libraries/library-proto-meta/pom.xml
@@ -32,6 +32,11 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
 
         <!--===========================-->
         <!--Test -->
